[package]
name = "march"
version = "0.1.0"
authors = ["dummyc0m"]
edition = "2018"

[dependencies.amethyst]
version = "0.15.0"
features = ["vulkan"]

[dependencies]
simdnoise = "3.1.6"
getset = "0.0.9"
ndarray = "0.13.1"
num-traits = "0.2.11"
ron = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
specs-physics = { version = "0.3.0", features = ["amethyst"] }
dashmap = "4.0.0-rc6"
derive_more = "0.99.9"
